manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funcs
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /azfn/js
        pathType: Prefix
        backend:
          service:
            name: azfn-js
            port:
              name: http
      - path: /azfn/py
        pathType: Prefix
        backend:
          service:
            name: azfn-py
            port:
              name: http
      - path: /spin/js
        pathType: Prefix
        backend:
          service:
            name: spin-js
            port:
              name: http
      - path: /spin/py
        pathType: Prefix
        backend:
          service:
            name: spin-py
            port:
              name: http
